--- a/customer_content/css/eo4geo_override.css
+++ b/customer_content/css/eo4geo_override.css
@@ -13,3 +13,41 @@ position: fixed;
 bottom: 3.5em;
 left: 3.5em;
 box-shadow: 5px 5px 10px #000; }
+
+.eq-container {
+  position: relative;
+}
+
+/* Bottom right text */
+.eq-text-block {
+  position: absolute;
+  bottom: -350px;
+  right: 100px;
+}
+
+.mytable {
+	border: 3px solid black;
+}
+
+table.mytable td {
+	text-align:center;
+	vertical-align:top;
+	font-size:14px;
+	font-weight: bold;
+	border: 1px solid black;
+}
+
+/*Chiedere a Valeria e Tramutoli*/
+.myimage {
+	background:none !important;
+	box-shadow: none !important;
+}
+
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: #C0C0C0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
